--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/uuid": "^7.0.0",
+    "konva": "^4.1.6",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-konva": "^16.12.0-0",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uuid": "^7.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
